<resources>
    <string name="app_name">RUCafe</string>
    <string name="subtotal">Subtotal</string>
    <string name="cream">Cream</string>
    <string name="milk">Milk</string>
    <string name="syrup">Syrup</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="caramel">Caramel</string>
    <string name="coffee">coffee</string>
    <string name="your_order">Click below to see your current order</string>
    <string name="order_donut">Order Donut</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="store_orders">Click below to view all store orders</string>
    <string name="store_order_title">Store Orders</string>
    <string name="coffee_image">coffee image</string>
    <string name="store_order_image">store order image</string>
    <string name="order_coffee_image">order coffee image</string>
    <string name="your_order_image">your order image</string>
    <string name="add_to_order">Add to Order</string>
    <string name="donut_image"/>
    <string name="choose_a_flavor">Choose a flavor</string>
    <string name="your_order_so_far">Your Order So Far</string>
    <string name="place_order">Place Order</string>
    <string name="total">Total</string>
    <string name="remove_selected_item">Remove Selected Item</string>
    <string name="tax">Tax</string>
    <string name="cancel_selected_order">Cancel Selected Order</string>
    <string name="chocolate">Chocolate</string>
    <string name="strawberry">Strawberry</string>
    <string name="vanilla">Vanilla</string>
    <string name="glazed">Glazed</string>
    <string name="blueberry">Blueberry</string>
    <string name="removeItem">To remove an item, press
        and hold on the menu item you would like to delete.
    </string>
    <string name="removeOrder">To remove an order, press
        and hold on the order you would like to delete.
    </string>
    <string name="click_below_to_order_donut">Click below to order Donut</string>
    <string name="click_below_to_order_coffee">Click below to order Coffee</string>
    <string name="return_to_main_menu">Return to Main Menu</string>
    <string name="choose_a_quantity">Choose a quantity</string>
    <string name="flavor">Flavor</string>
</resources>