<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CurrentOrder">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp" android:layout_marginStart="30dp" android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp" android:layout_marginBottom="30dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="214dp" android:id="@+id/currentOrderListView"/>

            <TextView
                    android:text="@string/subtotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView"/>
            <EditText
                    android:id="@+id/subTotalView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/subtotal"
                    android:inputType="numberDecimal"
                    android:enabled="false" android:clickable="false"/>

            <TextView
                    android:text="@string/tax"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView4"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/taxView" android:importantForAutofill="no" android:hint="@string/tax"
                    android:enabled="false"
                    android:clickable="false"/>
            <TextView
                    android:text="@string/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView5"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/totalView" android:importantForAutofill="no" android:hint="@string/total"
                    android:enabled="false"
                    android:clickable="false"/>
            <TextView
                    android:text="@string/removeItem"
                    android:layout_width="match_parent"
                    android:layout_height="36dp" android:id="@+id/deleteView"/>
            <Button
                    android:text="@string/place_order"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/placeOrderButton"
                    android:onClick= "placeOrderButton"/>
            <Button
                    android:text="@string/return_to_main_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/mainMenuButton"
                    android:onClick="returnToMainMenu"/>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
