<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".StoreOrdering">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="30dp"
            android:layout_marginLeft="30dp" android:layout_marginStart="30dp" android:layout_marginRight="30dp"
            android:layout_marginEnd="30dp" android:layout_marginBottom="30dp">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <Space
                    android:layout_width="match_parent"
                    android:layout_height="28dp"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/orderNumSpinner"/>
            <ListView
                    android:layout_width="match_parent"
                    android:layout_height="319dp" android:id="@+id/storeOrdersListView"/>
            <TextView
                    android:text="@string/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/totalText"/>
            <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/totalView" android:hint="@string/total" android:clickable="false"
                    android:enabled="false" android:autofillHints=""/>
            <TextView
                    android:text="@string/removeOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/textView6"/>
            <Button
                    android:text="@string/return_to_main_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/mainMenuButton"
                    android:onClick="returnToMainMenu"/>
        </LinearLayout>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>